# tokmat-polars

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs
tests/: test_python_plugin.py
tests/fixtures/model_1/TOKENCLASS/: PCODE.param  PROV.param  STREETTYPE.param  STREET_DIRECTION.param
tests/fixtures/model_1/TOKENDEFINITION/: TOKENDEFINITONS.param2
