[package]
name = "tokmat-polars"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Jean Philippe Wan"]
description = "Standalone Polars integration crate for tokmat"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/tokmat-polars"
repository = "https://github.com/Jrakru/tokmat-polars"
keywords = ["polars", "parser", "python", "address", "tokmat"]
categories = ["parser-implementations", "text-processing"]

[package.metadata]
copyright = "Copyright (c) 2026 Jean Philippe Wan"

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[lib]
name = "tokmat_polars"
crate-type = ["cdylib", "rlib"]

[dependencies]
polars = { version = "0.45.1", features = ["dtype-struct", "dtype-u8", "dtype-categorical"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
pyo3-polars = { version = "0.19", features = ["derive"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.13"
tokmat = { version = "0.1.1", path = "../tokmat" }
