[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tokmat-polars"
version = "0.1.0"
description = "Polars expression plugin and Python extension for tokmat"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Jean Philippe Wan" }
]
keywords = ["polars", "plugin", "address", "parser", "tokmat"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
]
dependencies = [
  "polars>=1.0",
]

[project.urls]
Homepage = "https://github.com/Jrakru/tokmat-polars"
Repository = "https://github.com/Jrakru/tokmat-polars"
Documentation = "https://docs.rs/tokmat-polars"

[tool.maturin]
bindings = "pyo3"
module-name = "tokmat_polars"
